clusters/cluster/apps/media/bazarr/deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: media-volume
          mountPath: /mnt/media
        - name: config-volume
          mountPath: /config
          subPath: media/bazarr
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
