clusters/cluster/apps/media/bazarr/service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: apps
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
      name: http
